Added openiddict and implicit auth flow.

--- a/src/TimeTracker.Web/ClientApp/app/_components/new-time-entry/new-time-entry.component.html
+++ b/src/TimeTracker.Web/ClientApp/app/_components/new-time-entry/new-time-entry.component.html
@@ -12,6 +12,6 @@
         {{hours}}:{{minutes | number:'2.0-0'}}:{{seconds | number:'2.0-0'}}
     </div>
     <div class="col-md-1">
-        <i class="fa fa-2x" [ngClass]="timer == null ? 'fa-play-circle': 'fa-stop-circle'" [style.color]="timer == null ? 'green' : 'red'" (click)="toggleTimer()"></i>
+        <i class="fa fa-2x" style="cursor: pointer" [ngClass]="timer == null ? 'fa-play-circle': 'fa-stop-circle'" [style.color]="timer == null ? 'green' : 'red'" (click)="toggleTimer()"></i>
     </div>
 </div>
