--- a/src/TimeTracker.Web/ClientApp/app/_components/nav-bar/nav-bar.component.html
+++ b/src/TimeTracker.Web/ClientApp/app/_components/nav-bar/nav-bar.component.html
@@ -15,13 +15,13 @@
                     <a [routerLink]="['/timeEntry']" routerLinkActive="active">Time Entry</a>
                 </li>
                 <li>
-                    <a *ngIf="isAuthenticated && currentUser.role == 'Administrator'" [routerLink]="['/admin', 'manageUsers']" routerLinkActive="active">Admin</a>
+                    <a *ngIf="isAuthorized && currentUser.role == 'Administrator'" [routerLink]="['/admin', 'manageUsers']" routerLinkActive="active">Admin</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a *ngIf="isAuthenticated; else login" style="cursor:pointer" (click)="logout()">{{currentUser.firstName}} {{currentUser.lastName}}</a>
-                    <ng-template #login><a routerLink="user/login" routerLinkActive="active">Login</a></ng-template>
+                    <a *ngIf="isAuthorized" style="cursor:pointer" (click)="logout()">{{currentUser.given_name}} {{currentUser.family_name}}</a>
+                    <a *ngIf="!isAuthorized" style="cursor: pointer" (click)="login()">Login</a>
                 </li>
             </ul>
         </div>
