--- a/src/TimeTracker.Web/Views/_ViewImports.cshtml
+++ b/src/TimeTracker.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using TimeTracker
+@using TimeTracker.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.SpaServices
