--- a/src/TimeTracker.Web/ClientApp/app/_components/nav-bar/nav-bar.component.html
+++ b/src/TimeTracker.Web/ClientApp/app/_components/nav-bar/nav-bar.component.html
@@ -12,10 +12,10 @@
         <div class="navbar-collapse collapse" id="navbar">
             <ul class="nav navbar-nav">
                 <li>
-                    <a [routerLink]="['/timeEntry']" routerLinkActive="active">Time Entry</a>
+                    <a [routerLink]="['/timeentry']" routerLinkActive="active">Time Entry</a>
                 </li>
                 <li>
-                    <a *ngIf="isAuthorized && currentUser.role == 'Administrator'" [routerLink]="['/admin', 'manageUsers']" routerLinkActive="active">Admin</a>
+                    <a *ngIf="isAuthorized && currentUser.role == 'Administrator'" [routerLink]="['/admin', 'manageusers']" routerLinkActive="active">Admin</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
