--- a/src/TimeTracker.Web/ClientApp/app/_components/time-entry-list/time-entry-list.component.html
+++ b/src/TimeTracker.Web/ClientApp/app/_components/time-entry-list/time-entry-list.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngFor="let timeEntry of timesheetEntries">
+<div class="row" *ngFor="let timeEntry of timesheetEntries$ | async">
     <div class="col-md-5">
         <span>{{timeEntry.description}}</span>
     </div>
