--- a/src/TimeTracker.Web/ClientApp/app/_components/time-entry/time-entry.component.html
+++ b/src/TimeTracker.Web/ClientApp/app/_components/time-entry/time-entry.component.html
@@ -1,2 +1,2 @@
-<new-time-entry [timesheetEntry]="timesheetEntry" (createEntry)="saveEntry($event)"></new-time-entry>
-<time-entry-list [timesheetEntries]="timesheetEntries"></time-entry-list>
+<new-time-entry></new-time-entry>
+<time-entry-list></time-entry-list>
